refined alighnment of list items, discovered a bug with delete buttons squishing when items are too long

--- a/Practice0310/todoapp/style.css
+++ b/Practice0310/todoapp/style.css
@@ -18,7 +18,7 @@ body {
 
 .list-container {
   margin-top: 4rem;
-  min-width: 300px;
+  width: 300px;
   background-color: white;
   padding: 4rem;
   border-radius: 1rem;
@@ -39,6 +39,7 @@ h1 {
   padding: 0.5rem;
   border-radius: 0.5rem;
   border: 2px solid black;
+  width: 100%;
 }
 
 #list {
@@ -48,7 +49,9 @@ h1 {
 }
 
 #list li {
-  margin: 1rem 0;
+  margin: 1.2rem 0;
+  display: flex;
+  align-items: center;
 }
 
 #list input {
@@ -66,14 +69,13 @@ h1 {
   border: none;
   background-color: black;
   color: white;
-  float: right;
   height: 1.4rem;
   width: 1.4rem;
   border-radius: 50%;
-
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: auto;
 }
 
 #clear-button {
